--- a/project1123/lesson1.ipynb
+++ b/project1123/lesson1.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "程式發生錯誤\n"
+      "超出索引編號\n"
      ]
     }
    ],
@@ -46,8 +46,10 @@
     "try:\n",
     "    names=[\"robert\",\"john\",\"gred\",\"boid\"]\n",
     "    print(names[4])\n",
-    "except:\n",
-    "    print(\"程式發生錯誤\")"
+    "except IndexError:\n",
+    "    print(\"超出索引編號\")\n",
+    "except Exception as e:\n",
+    "    print(e)\n"
    ]
   }
  ],
