--- a/project1123/lesson1.ipynb
+++ b/project1123/lesson1.ipynb
@@ -46,9 +46,9 @@
     "try:\n",
     "    names=[\"robert\",\"john\",\"gred\",\"boid\"]\n",
     "    print(names[4])\n",
-    "except IndexError:\n",
+    "except IndexError: #索引錯誤\n",
     "    print(\"超出索引編號\")\n",
-    "except Exception as e:\n",
+    "except Exception as e: #except Exception通常放最後面\n",
     "    print(e)\n"
    ]
   }
