add 檔案名稱 (commit Msg)

--- a/project1123/lesson1.ipynb
+++ b/project1123/lesson1.ipynb
@@ -51,6 +51,26 @@
     "except Exception as e: #except Exception通常放最後面\n",
     "    print(e)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#如果__pycache__被追蹤了 但不想追蹤他 取消追蹤就要打下方這個指令\n",
+    "#並在.gitignore上打上該資料夾\n",
+    "#git rm --cached -r __pycache__\n",
+    "#git rm --cached -r 檔案名稱\n",
+    "\n",
+    "#想被追蹤\n",
+    "#git add 檔案名稱\n",
+    "#git commit -m \"add 檔案名稱 (commit Msg)\"\n",
+    "#git push\n",
+    "#git .   #git所有檔案\n",
+    "#git commit -m \"modfiy 檔案名稱 (commit Msg)\"\n",
+    "#git push\n"
+   ]
   }
  ],
  "metadata": {
