--- a/project1123/lesson1.ipynb
+++ b/project1123/lesson1.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#要打包成exe\n",
+    "#pip install pyinstaller\n",
+    "\n",
+    "#要記得先打包到requirements.txt\n",
+    "#pip freeze > requirements.txt\n",
+    "\n",
+    "#pyinstaller -F ./main.py  #mac打的指令\n",
+    "#pyinstaller -F .\\main.py  #windows打的指令"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
