--- a/project1123/lesson1.ipynb
+++ b/project1123/lesson1.ipynb
@@ -13,7 +13,11 @@
     "#pip freeze > requirements.txt\n",
     "\n",
     "#pyinstaller -F ./main.py  #mac打的指令\n",
-    "#pyinstaller -F .\\main.py  #windows打的指令"
+    "#pyinstaller -icon=./turkey_icon.ico -F ./main.py  #讓左上出現icon\n",
+    "\n",
+    "\n",
+    "#pyinstaller -F .\\main.py  #windows打的指令\n",
+    "#pyinstaller -icon=.\\turkey_icon.ico -F .\\main.py  #讓左上出現icon\n"
    ]
   },
   {
