--- a/project1207/lesson2.ipynb
+++ b/project1207/lesson2.ipynb
@@ -101,6 +101,202 @@
     "    print(a_item.get_text())\n",
     "    print(a_item.attrs[\"href\"])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "body\n",
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "#r代表Regular(正規化表示法)\n",
+    "#^b 抓開頭=b的標籤\n",
+    "for tag in soup.find_all(name=re.compile(r\"^b\")):\n",
+    "    print(tag.name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "html\n",
+      "title\n"
+     ]
+    }
+   ],
+   "source": [
+    "#抓標籤名稱裡有t的\n",
+    "for tag in soup.find_all(name=re.compile(r\"t\")):\n",
+    "    print(tag.name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Dormouse's story\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "The Dormouse's story\n",
+      "<class 'bs4.element.NavigableString'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#搜尋標籤裡包的文字\n",
+    "for tag in soup.find_all(string=re.compile(r\"Dormouse's\")):\n",
+    "    print(tag)\n",
+    "    print(type(tag))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<a class=\"sister\" href=\"http://example.com/elsie\" id=\"link1\">Elsie</a>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find(name=\"a\",id='link1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<a class=\"sister\" href=\"http://example.com/elsie\" id=\"link1\">Elsie</a>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find(name=\"a\",class_='sister')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<p class=\"story\">Once upon a time there were three little sisters; and their names were\n",
+       "<a class=\"sister\" href=\"http://example.com/elsie\" id=\"link1\">Elsie</a>,\n",
+       "<a class=\"sister\" href=\"http://example.com/lacie\" id=\"link2\">Lacie</a> and\n",
+       "<a class=\"sister\" href=\"http://example.com/tillie\" id=\"link3\">Tillie</a>;\n",
+       "and they lived at the bottom of a well.</p>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find(attrs={'class':'story'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p class=\"story\">Once upon a time there were three little sisters; and their names were\n",
+       " <a class=\"sister\" href=\"http://example.com/elsie\" id=\"link1\">Elsie</a>,\n",
+       " <a class=\"sister\" href=\"http://example.com/lacie\" id=\"link2\">Lacie</a> and\n",
+       " <a class=\"sister\" href=\"http://example.com/tillie\" id=\"link3\">Tillie</a>;\n",
+       " and they lived at the bottom of a well.</p>,\n",
+       " <p class=\"story\">...</p>]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.findAll(attrs={'class':'story'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<a class=\"sister\" href=\"http://example.com/elsie\" id=\"link1\">Elsie</a>,\n",
+       " <a class=\"sister\" href=\"http://example.com/lacie\" id=\"link2\">Lacie</a>,\n",
+       " <a class=\"sister\" href=\"http://example.com/tillie\" id=\"link3\">Tillie</a>]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.findAll(href=re.compile(r\"^http\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<a class=\"sister\" href=\"http://example.com/elsie\" id=\"link1\">Elsie</a>]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.findAll(href=re.compile(r\"elsie$\"))"
+   ]
   }
  ],
  "metadata": {
