高鐵時刻表範例

--- a/project1207/lession5.ipynb
+++ b/project1207/lession5.ipynb
@@ -52,7 +52,7 @@
     "    print(item.get_attribute(\"value\"))\n",
     "\n",
     "#要等至可以click時,才可以選取\n",
-    "WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.ID,\"select_location01\")))\n",
+    "WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.ID,\"select_location01\"))) #等到找到select_location01元素後再click\n",
     "#selected_location1.select_by_value('TaiPei')\n",
     "selected_location1.select_by_visible_text('台中') #select_by_visible_text 網頁顯示的文字\n",
     "\n",
@@ -74,7 +74,7 @@
     "WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.ID,\"Departdate01\"))).click()\n",
     "\n",
     "#因為點選,所以必需執行javascript\n",
-    "now = datetime.today()\n",
+    "now = datetime.today() #抓現在時間\n",
     "current_date = now.strftime(\"%Y.%m.%d\")\n",
     "current_hour = now.strftime(\"%H\")\n",
     "driver.execute_script(f'arguments[0].value = \"{current_date}\";', departDate01)\n",
