--- a/project1207/lession5.ipynb
+++ b/project1207/lession5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -37,6 +37,7 @@
     "\n",
     "driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
     "driver.get(\"https://www.thsrc.com.tw\")\n",
+    "driver.set_window_size(1600,900) #設定視窗大小\n",
     "driver.implicitly_wait(0.5)\n",
     "try:\n",
     "    agree_btn = driver.find_element(by=By.CSS_SELECTOR,value=\".swal2-confirm\")\n",
